<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:padding="@dimen/screen_default_padding"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_input_layout_hint_username"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forms_default_marginTop"
        android:hint="@string/login_input_layout_hint_password"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLoginSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forms_default_marginTop"
        android:text="@string/login_button_text_sign_in"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLoginSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forms_default_marginTop"
        android:text="@string/login_button_text_sign_up"/>

</LinearLayout>