<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.odougle.simplelogin.ui.start.StartFragment"
        android:label="@string/start_action_bar_title"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.odougle.simplelogin.ui.profile.ProfileFragment"
        android:label="@string/profile_action_bar_title"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.odougle.simplelogin.ui.login.LoginFragment"
        android:label="@string/login_action_bar_title"
        tools:layout="@layout/login_fragment">
    <action
        android:id="@+id/action_loginFragment_to_registrationNavigation"
        app:destination="@+id/registrationNavigation"
        />
    </fragment>

    <navigation
        android:id="@+id/registrationNavigation"
        app:startDestination="@id/profileDataFragment"
        >
        <fragment
            android:id="@+id/profileDataFragment"
            android:name="com.odougle.simplelogin.ui.registration.profile.ProfileDataFragment"
            android:label="@string/profile_action_bar_title"
            tools:layout="@layout/fragment_profile_data" >
            <action
                android:id="@+id/action_profileDataFragment_to_chooseCredentialsFragment"
                app:destination="@id/chooseCredentialsFragment" />
        </fragment>
        <fragment
            android:id="@+id/chooseCredentialsFragment"
            android:name="com.odougle.simplelogin.ui.registration.choosecredentials.ChooseCredentialsFragment"
            android:label="fragment_choose_credentials"
            tools:layout="@layout/fragment_choose_credentials" />
    </navigation>
</navigation>